--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,15 +7,10 @@
 
     </head>
     <body style="margin: 0; padding: 0;">
-        <header>
-            <div style="background-color: #FF0000; height: 70px; width: 100%;">
-
-            </div>
+        <header style="background-color: #FF0000; height: 70px; width: 100%;">
         </header>
         <footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; display: flex; justify-content: center; align-items: center;">
-            <div>
-                Holberton School
-            </div>
+            Holberton School
         </footer>
     </body>
 </html>
