--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -4,6 +4,29 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, inital-scale=1.0, viewport-fit=cover">
         <title>Web static</title>
+        <style>
+            body {
+                margin: 0;
+                padding: 0;
+            }
+
+            header {
+                background-color: #FF0000;
+                height: 70px;
+                width: 100%;
+            }
+
+            footer {
+                background-color: #00FF00;
+                height: 60px;
+                width: 100%;
+                position: absolute;
+                bottom: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        </style>
 
     </head>
     <body style="margin: 0; padding: 0;">
