--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -29,7 +29,7 @@
         </style>
 
     </head>
-    <body style="margin: 0; padding: 0;">
+    <body>
         <header>
         </header>
         <footer>
