--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -4,8 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, inital-scale=1.0, viewport-fit=cover">
         <title>Web static</title>
+        <link rel="stylesheet" href="styles/2-common.css">
+        <link rel="stylesheet" href="styles/2-header.css">
+        <link rel="stylesheet" href="styles/2-footer.css">
     </head>
-    <body style="margin: 0; padding: 0;">
+    <body>
         <header>
         </header>
         <footer>
